--- a/KOSS_AD/switch.html
+++ b/KOSS_AD/switch.html
@@ -13,14 +13,18 @@
   <div class="title">
     <h1>Entrance Detection</h1>
   </div>
-  <img id="img" style="height:300px; margin-left:800px; margin-top:200px" src="svg/unlock.svg">
-  <input type="checkbox" onClick="toggleImg()" id="toggle" hidden> 
+  <img id="img" style="height:200px; margin-left:350px; margin-top:100px" src="svg/unlock.svg">
+
+  <input type="checkbox" onClick="toggleImg(); door();" id="toggle" hidden> 
   <label for="toggle" class="toggleSwitch">
     <span class="toggleButton"></span>
+    <img class="click" src="svg/click.svg">
+    <span class="text">click here!</span>
   </label>
+
+  <img style="height:320px; position: absolute; transform: translate(280%, -10%);" src="svg/house.svg">
+  <img id="img1" style="height:200px; width: 130px; position: absolute; transform: translate(760%, 55%);" src="svg/opened-door.svg">
 </div>
-
-
 </body>
 
 <script>
@@ -32,7 +36,37 @@
 
   flag = !flag;
   }
+
+  let flag1 = true;
+  function door() {
+  document.getElementById("img1").src = flag1
+  ? "svg/closed-door.svg"
+  : "svg/opened-door.svg";
+
+  flag1 = !flag1;
+  }
 </script>
+
+
+<nav role='navigation'>
+  <div id="menuToggle">
+    
+    <input type="checkbox" />
+    
+    <span></span>
+    <span></span>
+    <span></span>
+  
+    <ul id="menu">
+      <a href="switch.html"><li>Home</li></a>
+      <a href="firstpage.html"><li>firstpage</li></a>
+      <a href="#"><li>About</li></a>
+      <a href="#"><li>Info</li></a>
+      <a href="#"><li>Contact</li></a>
+      <a href="#"><li>Show me more</li></a>
+    </ul>
+  </div>
+</nav>
 
 
 </html>
