add noinvasion in menu

--- a/KOSS_AD/switch.html
+++ b/KOSS_AD/switch.html
@@ -62,7 +62,7 @@
       <a href="firstpage.html"><li>firstpage</li></a>
       <a href="#"><li>About</li></a>
       <a href="#"><li>Info</li></a>
-      <a href="#"><li>Contact</li></a>
+      <a href="noinvasion.html"><li>NoInvasion</li></a>
       <a href="#"><li>Show me more</li></a>
     </ul>
   </div>
